--- a/argocd-app.yaml
+++ b/argocd-app.yaml
@@ -9,7 +9,7 @@ spec:
   project: default
   source:
     path: k8s
-    repoURL: https://github.com/Tushar04072000/argocdApp
+    repoURL: https://github.com/Tushar04072000/argocdApp.git
     targetRevision: main # Or your branch name
   syncPolicy:
     automated:
